--- a/responsive.css
+++ b/responsive.css
@@ -37,7 +37,7 @@
     }
     .food-menu-container {
         display: block;
-        width: 1246px;
+        width: 124.6rem;
     }
     .food-menu-item {
         margin-bottom:8rem;
@@ -75,15 +75,15 @@
         height: 15rem;
     }
     .customer-photo {
-        width: 120px;
-        height: 120px;
+        width: 12rem;
+        height: 12rem;
     }
     .customer-name{
         font-size: 2rem;
     }
     .contact-container {
         display: block;
-        height: 300px;
+        height: 30rem;
     }
     #contact {
         padding: 3rem 0;
@@ -129,7 +129,7 @@
 
 @media only screen and (max-width:890px) and (min-width:400px){
     .container {
-        max-width: 503px;
+        max-width: 50.3rem;
         width: 92%;
         margin: auto;
     }
@@ -143,26 +143,26 @@
     .navbar-container{
         display: block;
         position: relative;
-        height: 64px;
+        height: 6.4rem;
     }
     .navbar-container input[type='checkbox'] {
         position: absolute;
         display: block;
-        height: 40px;
-        width: 40px;
-        top: 14px;
-        left: 10px;
+        height: 4rem;
+        width: 4rem;
+        top: 1.4rem;
+        left: 1rem;
         right: 100%;
         z-index: 5;
         opacity:0; 
     }
     .navbar-container .hamburger-lines{
         display: block;
-        height: 32px;
-        width: 40px;
+        height: 3.2rem;
+        width: 4rem;
         position: absolute;
-        top: 14px;
-        left: 10px;
+        top: 1.4rem;
+        left: 1rem;
         right: 100%;
         z-index: 2;
         display: flex;
@@ -171,9 +171,9 @@
     }
     .navbar-container .hamburger-lines .line{
         display: block;
-        height: 4px;
+        height: .4rem;
         width: 100%;
-        border-radius: 10px;
+        border-radius: 1rem;
         background: #333333;
      }
      .navbar-container .hamburger-lines .line1{
@@ -187,17 +187,17 @@
          transform-origin: 0% 100%;
          transition: transform 0.4s ease-in-out;
      }.navbar .menu-items{
-        padding-top: 100px;
+        padding-top: 10rem;
         background: #fff;
         height: 100vh;
-        max-width:300px;
+        max-width:30rem;
         transform: translateX(-180%);
         display: flex;
         flex-direction: column;
-        margin-left:-61px;
-        padding-left: 50px;
+        margin-left:-6.1rem;
+        padding-left: 5rem;
         transition: transform 0.5s ease-in-out;
-        box-shadow: 5px 0 10px 0 #aaa; 
+        box-shadow: .5rem 0 1rem 0 #aaa; 
     }
     .navbar .menu-items li{
         margin-bottom: 3rem;
@@ -206,8 +206,8 @@
     }
     .logo{
         position: absolute;
-        top: 10px;
-        right: 15px;
+        top: 1rem;
+        right: 1.5rem;
         font-size: 3rem;
     }
     .navbar-container input[type = 'checkbox']:checked ~ .menu-items{
@@ -227,7 +227,7 @@
         padding: 0;
     }
     .about-img {
-        padding: 0px;
+        padding: 0;
     }
     #food h2 {
         font-size: 4rem;
@@ -243,13 +243,13 @@
     }
     .food-menu-item {
         display: inline-block;
-        height: 27px;
+        height: 2.7rem;
         margin-bottom: -20rem;
         position: relative;
     }
     .food-menu-container img {
-        width: 200px;
-        height: 200px;
+        width: 20rem;
+        height: 20rem;
         position: absolute;
         left: 8rem;
     }
@@ -297,5 +297,63 @@
     .contact-image {
         width:100%;
         height:auto;
+    }
+}
+
+@media only screen and (max-width: 850px)and (min-width: 500px){
+    .food-menu-container img {
+        left: 12rem;
+    }
+    .food-description {
+        left: 10rem;
+    }
+}
+@media only screen and (max-width: 720px)and (min-width: 650px){
+    .food-container {
+        height:102rem;
+        position: relative;
+    }
+    .food-type {
+        position: absolute;
+    }
+    .fruit{
+        top:1.5rem;
+        left: 8rem;
+        width: 100%;
+    }
+    .vegetable {
+        top: 34.5rem;
+        left: 8rem;
+        width: 100%;
+    }
+    .grain {
+        top: 67.8rem;
+        width: 100%;
+        left: 8rem;
+    }
+}
+
+@media only screen and (max-width: 840px)and (min-width: 720px){
+    .food-container {
+        height:102rem;
+        position: relative;
+    }
+    .food-type {
+        position: absolute;
+    }
+    .fruit{
+        top:1.5rem;
+        left: 12.5rem;
+        width: 100%;
+    }
+    .vegetable {
+        top: 34.5rem;
+        left: 12.5rem;
+        width: 100%;
+    }
+    .grain {
+        top: 67.8rem;
+        width: 100%;
+        left: 12.5rem;
     }
 }
