--- a/responsive.css
+++ b/responsive.css
@@ -39,6 +39,13 @@
         display: block;
         width: 124.6rem;
     }
+    /* .food-menu-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        margin-bottom: 3rem;
+        margin: 13px  6rem;
+    } */
     .food-menu-item {
         margin-bottom:8rem;
     }
@@ -118,16 +125,61 @@
 
 }
 
+@media only screen and (max-width: 890px)and (min-width: 720px){
+    .food-container {
+        height:102rem;
+        position: relative;
+    }
+    .food-type {
+        position: absolute;
+    }
+    .fruit{
+        top:1.5rem;
+        left: 1.7rem;
+        width: 100%;
+    }
+    .vegetable {
+        top: 34.5rem;
+        left: 1.7rem;
+        width: 100%;
+    }
+    .grain {
+        top: 67.8rem;
+        width: 100%;
+        left: 1.7rem;
+    }
+    .food-menu-container {
+        display:block;
+        padding: 50px 0 30px 157px;
+       }
+    .food-menu-item {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 3rem;
+        margin: 18px  6rem;
+    }
+    .testimonial-container{
+        display: block;
+    }
+}
 
+@media only screen and (max-width: 720px)and (min-width: 680px){ 
+    .food-menu-container {
+    display:block;
+   }
+   .food-menu-item {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -32rem;
+    margin-bottom: 3rem;
+}
+.testimonial-container {
+    padding: 1rem;
+    display: block;
+}
+}
 
-
-
-
-
-
-
-
-@media only screen and (max-width:890px) and (min-width:400px){
+@media only screen and (max-width:680px) and (min-width:300px){
     .container {
         max-width: 50.3rem;
         width: 92%;
@@ -300,15 +352,7 @@
     }
 }
 
-@media only screen and (max-width: 850px)and (min-width: 500px){
-    .food-menu-container img {
-        left: 12rem;
-    }
-    .food-description {
-        left: 10rem;
-    }
-}
-@media only screen and (max-width: 720px)and (min-width: 650px){
+@media only screen and (max-width: 620px)and (min-width: 570px){     
     .food-container {
         height:102rem;
         position: relative;
@@ -316,24 +360,24 @@
     .food-type {
         position: absolute;
     }
-    .fruit{
-        top:1.5rem;
-        left: 8rem;
+    .fruit {
+        top: 1.5rem;
+        left: 5.7rem;
         width: 100%;
     }
     .vegetable {
         top: 34.5rem;
-        left: 8rem;
+        left: 5.7rem;
         width: 100%;
     }
     .grain {
         top: 67.8rem;
+        left: 5.7rem;
         width: 100%;
-        left: 8rem;
     }
 }
 
-@media only screen and (max-width: 840px)and (min-width: 720px){
+@media only screen and (max-width: 710px)and (min-width: 620px){
     .food-container {
         height:102rem;
         position: relative;
@@ -341,19 +385,85 @@
     .food-type {
         position: absolute;
     }
-    .fruit{
-        top:1.5rem;
-        left: 12.5rem;
+    .fruit {
+        top: 1.5rem;
+        left: 5.7rem;
         width: 100%;
     }
     .vegetable {
         top: 34.5rem;
-        left: 12.5rem;
+        left: 5.7rem;
         width: 100%;
     }
     .grain {
         top: 67.8rem;
+        left: 5.7rem;
         width: 100%;
-        left: 12.5rem;
+    }
+
+} 
+
+
+@media only screen and (max-width: 570px)and (min-width: 510px){     
+    .food-container {
+        height:102rem;
+        position: relative;
+    }
+    .food-type {
+        position: absolute;
+    }
+    .fruit {
+        top: 1.5rem;
+        left: 5.5rem;
+        width:auto;
+    }
+    .vegetable {
+        top: 34.5rem;
+        left: 5.5rem;
+        width:auto;
+    }
+    .grain {
+        top: 67.8rem;
+        width:auto;
+        left: 5.5rem;
     }
 }
+
+@media only screen and (max-width: 400px)and (min-width: 300px){
+    .showcase-container p{
+        font-size: 1.4rem;
+    }
+    #about h2 {
+        font-size: 2.4rem;
+        margin-bottom: 0.8rem;
+    }
+    #about img{
+        width: 100%;
+        height: auto;
+    }
+    #food h2 {
+        font-size: 3.2rem;
+    }
+    .fruit {
+        top: 1.5rem;
+        left: 0.5;
+    }
+    .vegetable {
+        top: 25.5rem;
+        left: 0.2rem;
+    }
+    .grain {
+        top: 49.8rem;
+        left: 0.2rem;
+    }
+    .food-menu-container img {
+        left: 5rem;
+    }
+    .food-description {
+        left: 2rem;
+    }
+}
+
+
+
+
